# sok_fhe_friendly_symmetric_ciphers

./: .gitignore  README.md  README.me
BtR_framework/chisqtest/: chisq.go
BtR_framework/ckks_cipher/: aes_ctr.go  rtb_cipher.go  sbox_poly.go
BtR_framework/cnn_infer/: infer_plain.go
BtR_framework/examples/btr_cipher/: main.go
BtR_framework/examples/resnet/: main.go
C-SEAL_benchmark/cnn_ckks/: CMakeLists copy.txt  CMakeLists.txt
C-SEAL_benchmark/cnn_ckks/common/: PolyUpdate.cpp  Polynomial.h  Remez.cpp
C-SEAL_benchmark/cnn_ckks/data/: chi2.txt  odds.txt  pvalue.txt
C-SEAL_benchmark/cnn_ckks/result/: BinBootPower.txt
C-SEAL_benchmark/cnn_ckks/run/: bit_compare.cpp  chi2-bak.cpp  demo-chi2.cpp  gen_approx.cpp  resnet_infer.cpp  run_aes_ctr.cpp  run_cnn.cpp  run_gift64_ctr.cpp  run_gift_ctr.cpp
CGGI_based/fftw-3.3.10/dft/: Makefile
CGGI_based/fftw-3.3.10/genfft/: Makefile
CGGI_based/fftw-3.3.10/kernel/: Makefile
CGGI_based/fftw-3.3.10/libbench2/: Makefile
CGGI_based/fftw-3.3.10/m4/: Makefile
CGGI_based/fftw-3.3.10/rdft/: Makefile
CGGI_based/fftw-3.3.10/reodft/: Makefile
CGGI_based/fftw-3.3.10/simd-support/: Makefile
CGGI_based/fftw-3.3.10/tools/: fftw-wisdom
Lattigo_benchmark/: go.sum  未命名绘图.drawio
Lattigo_benchmark/chisqtest/: chisq.go
Lattigo_benchmark/ckks/: bootstrap.go
Lattigo_benchmark/ckks_cipher/: aes_ctr.go  matrix_gen.go  rtb_cipher.go  sbox_poly.go  utils.go
Lattigo_benchmark/ckks_fv/: RtF_bench_test.go  bootstrap_params.go  bootstrap_real.go  ckks_encryptor.go  fv_masta.go  fv_pasta.go  fv_rubato.go  mfv_encoder.go  mfv_noise_estimator.go  plaintext.go  utils.go
Lattigo_benchmark/cnn_infer/: cipher_poly.go  cipher_relu.go  cnn_lattigo.go  cnn_plain.go  infer_lattigo.go  parser.go  process_trans_res.go  rtf_hera_infer.go  rtf_rubato_infer.go
Lattigo_benchmark/examples/chisq/: main.go
Lattigo_benchmark/examples/ckks_fv/: Masta6.sol  Masta6S.sol  Masta7.sol  Masta7S.sol  Masta_test.sol  Pasta4.sol  Pasta4S.sol  Pasta5.sol  main.go  masta.go  pasta.go
Lattigo_benchmark/examples/compare/: hera_4sort.sol  main.go
Lattigo_benchmark/examples/resnet/: dbg.sol  main_parm.go  rubato.sol  rubato128s.sol  tester.sol
Lattigo_benchmark/examples/transcipher/: main.go
Lattigo_benchmark/exp_time/: high_upload_tp.sage  low_upload_tp.sage
Lattigo_benchmark/minimax_comp/: minimax_comp.go  plain_poly.go  rtf_hera_comp.go  rtf_rubato_comp.go  tree_program.go
Lattigo_benchmark/ring/: ring_operations.go
RtF_framework/ckks/: bootstrap_params.go
RtF_framework/ckks_fv/: RtF_bench_test.go  bootstrap.go  ciphertext.go  ckks_decryptor.go  ckks_encoder.go  ckks_evaluator.go  fv_hera.go  halfboot_params.go  halfbootstrapper.go  linear_transform.go  mfv_decryptor.go  mfv_encryptor.go  mfv_evaluator.go
RtF_framework/cnn_infer/: cnn_plain.go  infer_plain.go
RtF_framework/examples/chisq/: main.go
RtF_framework/examples/ckks_fv/: masta.go  pasta.go
RtF_framework/minimax_comp/: cipher_poly.go
RtF_framework/ring/: ring_automorphism.go
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/: CMakeLists.txt
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/common/: MinicompFunc.cpp  MinicompFunc.h  Polynomial.cpp  RemezApp.cpp  RemezParam.h
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/aes_enc/: CMakeLists.txt  aes_enc.h  poly_sbox.cpp
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/ckks_bootstrapping/: Bootstrapper.h  cosine.txt
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/cnn/: CMakeLists.txt  cnn_plain.cpp  cnn_seal.h  infer_seal.cpp
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/comp/: SEALcomp.cpp  SEALcomp.h  plaincomp.cpp  plaincomp.h  plainfunc.h
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/gift_enc/: CMakeLists.txt  gift64_enc.cpp  gift64_enc.h
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/: CMakeLists.txt  make_perform.sh
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/native/examples/: 2_encoders.cpp  examples.cpp  multi_process
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/native/src/seal/: evaluator.h  modulus.cpp
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/native/src/seal/util/: numth.cpp  polyarithsmallmod.cpp
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/cpu-ckks/single-key/seal_cipher/: CMakeLists.txt  seal_helper.cpp  seal_helper.h
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/data/: result.txt
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/result/: BinBootcheb.txt
aaa_usenix_version/C-SEAL_benchmark/cnn_ckks/run/: run_bootstrapping.cpp  run_cnn.cpp
aaa_usenix_version/RtF_framework/: go.mod
aaa_usenix_version/RtF_framework/chisqtest/: odds.txt  pValue.txt
aaa_usenix_version/RtF_framework/ckks/: ckks_test.go
aaa_usenix_version/RtF_framework/ckks_fv/: RtF_bench_test.go  bootstrapper.go  halfboot.go  keygen.go  keys.go  operand.go  params.go  rtf_params.go
aaa_usenix_version/RtF_framework/cnn_infer/: parser.go  plain_relu.go
aaa_usenix_version/RtF_framework/minimax_comp/: rtf_rubato_comp.go
aaa_usenix_version/RtF_framework/ring/: modular_reduction.go  ring_sampler_gaussian.go
bit_rgsw/fftw-3.3.10/: Makefile  config.h  config.status  libtool
bit_rgsw/fftw-3.3.10/.libs/: libfftw3.so.3.6.10
bit_rgsw/fftw-3.3.10/api/: Makefile
bit_rgsw/fftw-3.3.10/doc/: Makefile
bit_rgsw/fftw-3.3.10/mpi/: Makefile
bit_rgsw/fftw-3.3.10/support/: Makefile
bit_rgsw/fftw-3.3.10/tests/: Makefile  bench
bit_rgsw/fftw-3.3.10/threads/: Makefile
bit_rgsw/fftw-3.3.10/tools/: Makefile
lattigo_rlwe/chisqtest/: chi2.txt  chisq.go
lattigo_rlwe/ckks_cipher/: aes_ctr.go
lattigo_rlwe/examples/btr_cipher/: T1.sol  T1_test2.sol  T64.sol  main.go  re.sol
lattigo_rlwe/examples/ckks_fv/: main.go
lattigo_rlwe/examples/rtf_cipher/: main.go  masta.go  pasta.go
lattigo_rlwe/utils/cosine/: cosine_approx.go
xor_free_lattigo/ckks_cipher/: aes_ctr.go  rtb_cipher.go
(+548 files in other folders)
